force-app/main/default/objects/Approval_Process_Node_To_Queue_Mapping__mdt/Approval_Process_Node_To_Queue_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Approval Process Node To Queue Mapping</label>
    <pluralLabel>Approval Process Node To Queue Mappings</pluralLabel>
</CustomObject>