force-app/main/default/objects/Approval_Process_Node_To_Queue_Mapping__mdt/fields/Approval_Process_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Developer_Name__c</fullName>
    <description>The developer name of the approval process</description>
    <label>Approval Process Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>