force-app/main/default/objects/Approval_Process_Node_To_Queue_Mapping__mdt/fields/Approval_Process_Node__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Node__c</fullName>
    <label>Approval Process Node</label>
    <length>20</length>
    <type>Text</type>
</CustomField>