force-app/main/default/objects/Approval_Process_Node_To_Queue_Mapping__mdt/fields/Approval_Step_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step_Developer_Name__c</fullName>
    <description>Developer Name of the Approval Step</description>
    <label>Approval Step Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>