force-app/main/default/objects/Approval_Process_Node_To_Queue_Mapping__mdt/fields/Replacement_Queue__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Queue__c</fullName>
    <label>Replacement Queue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>